docs: complete swagger api docs
